Estilizado de la página de contacto y traducciones

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -6,5 +6,7 @@
   "COMPLAINT": "Queja",
   "COMPLAINTS": "Quejas",
   "MAIL": "Correo electrónico",
-  "OUR SOCIAL NETWORKS": "Nuestras redes sociales"
+  "OUR SOCIAL NETWORKS": "Nuestras redes sociales",
+  "LOCALIZACION": "¿Dónde estamos?",
+  "DESC_LOCALIZACION": "Nos encontramos en el aula 07 o a través de los siguientes canales:"
 }
