--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -8,5 +8,8 @@
   "MAIL": "Correo electrónico",
   "OUR SOCIAL NETWORKS": "Nuestras redes sociales",
   "LOCALIZACION": "¿Dónde estamos?",
-  "DESC_LOCALIZACION": "Nos encontramos en el aula 07 o a través de los siguientes canales:"
+  "DESC_LOCALIZACION": "Nos encontramos en el aula 07 o a través de los siguientes canales:",
+  "NOTICIAS": "NOTICIAS",
+  "UNIVERSIDAD": "UNIVERSIDAD",
+  "ALERTAS": "ALERTAS"
 }
