--- a/src/assets/i18n/eus.json
+++ b/src/assets/i18n/eus.json
@@ -1,5 +1,8 @@
 {
   "HELLO": "Kaixo!",
   "IDIOMA": "Hizkuntza",
-  "NOMBRE": "Izena"
+  "NOMBRE": "Izena",
+  "NOTICIAS": "Notiziak",
+  "ALERTAS": "ALERTAK",
+  "UNIVERSIDAD": "UNIBERTSITATEA"
 }
