--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -16,6 +16,8 @@
   "CONTACT": "Contacto",
   "MENTORING": "Tutorías",
   "TIC": "Información TIC",
-  "SCHEDULE": "Agenda"
+  "SCHEDULE": "Agenda",
+  "NOTES DESC": "Estamos creando una base de datos de apuntes, ¿nos ayudas aportándonos alguno? Escríbenos a consejo.estudiantes@unavarra.es",
+  "MORE INFO IN WEBSITE": "Más información en la web"
 
 }
