--- a/src/assets/i18n/eus.json
+++ b/src/assets/i18n/eus.json
@@ -16,5 +16,8 @@
   "CONTACT": "Kontaktuak",
   "MENTORING": "Tutoretzak",
   "TIC": "TIC Informazioa",
-  "SCHEDULE": "Egunkari"
+  "SCHEDULE": "Egunkari",
+  "NOTES DESC": "EUS mandanos apuntes pliesEscríbenos a consejo.estudiantes@unavarra.es",
+  "MORE INFO IN WEBSITE": "EUSMás información en la web"
+
 }
