--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -18,6 +18,10 @@
   "TIC": "Información TIC",
   "SCHEDULE": "Agenda",
   "NOTES DESC": "Estamos creando una base de datos de apuntes, ¿nos ayudas aportándonos alguno? Escríbenos a consejo.estudiantes@unavarra.es",
-  "MORE INFO IN WEBSITE": "Más información en la web"
+  "MORE INFO IN WEBSITE": "Más información en la web",
+  "TRANSPORT": "Transporte",
+  "ARROSADIA": "Arrosadía",
+  "HEALTH": "Salud",
+  "TUDELA": "Tudela"
 
 }
