--- a/src/assets/i18n/eus.json
+++ b/src/assets/i18n/eus.json
@@ -18,6 +18,10 @@
   "TIC": "TIC Informazioa",
   "SCHEDULE": "Egunkari",
   "NOTES DESC": "EUS mandanos apuntes pliesEscríbenos a consejo.estudiantes@unavarra.es",
-  "MORE INFO IN WEBSITE": "EUSMás información en la web"
+  "MORE INFO IN WEBSITE": "EUSMás información en la web",
+  "TRANSPORT": "Garraioa",
+  "ARROSADIA": "Arrosadiko",
+  "HEALTH": "Osasun",
+  "TUDELA": "Tutera"
 
 }
